Implement direct tactical piloting for local build 0.2.0